@@ -2871,6 +2871,9 @@
 				<File
 					RelativePath="os.cpp"
 					>
+				<File
+					RelativePath="utf8.cpp"
+					>
 				</File>
 				<File
 					RelativePath="CProfiler.cpp"
